loop marker covered