@@ -1,9 +1,12 @@
 package edu.kit.domain.qualityMetrics;
 
+import org.camunda.bpm.model.bpmn.instance.*;
 import org.camunda.bpm.model.bpmn.instance.Process;
+import org.camunda.bpm.model.bpmn.instance.di.DiagramElement;
+import org.camunda.bpm.model.xml.instance.DomElement;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,7 +20,7 @@ public class TaskTypeDefinition extends QualityCriteria{
         criteriaID = "Task Type Definition";
         this.process = process;
         outliers = new ArrayList<String>();
-        forbiddenTaskTypes = Arrays.asList("manualTask","task","scriptTask");
+        forbiddenTaskTypes = List.of("manualTask","task","scriptTask");
         calculate();
     }
 
@@ -31,12 +34,45 @@ public class TaskTypeDefinition extends QualityCriteria{
 
     @Override
     public void calculate() {
-        int taskCount = (int) process.getFlowElements().stream().filter(flowElement -> flowElement.getElementType().getBaseType().getTypeName().matches("task|activity")).count();
-        this.outliers = process.getFlowElements().stream()
-                .filter(flowElement -> forbiddenTaskTypes.contains(flowElement.getElementType().getTypeName())).map(task -> task.getId()).collect(Collectors.toList());
-        outliers.addAll(process.getFlowElements().stream()
-                .filter(flowElement -> flowElement.getElementType().getTypeName().equals("subProcess") && flowElement.getRawTextContent().isEmpty())
-                .map(subProcess -> subProcess.getId()).collect(Collectors.toList()));
-        this.score = (taskCount- (double) outliers.size()) / taskCount;
+        List<FlowElement> flowElementsList = new ArrayList<>();
+        flowElementsList.addAll(process.getChildElementsByType(Activity.class));
+        flowElementsList.addAll(process.getChildElementsByType(Event.class));
+        flowElementsList.addAll(getFlowElementsOfSubprocesses(process,List.of(Event.class,Activity.class)));
+        outliers = flowElementsList.stream()
+               .filter(element -> forbiddenTaskTypes.contains(element.getElementType().getTypeName()) || isEmptySubprocess(element) || isNonTypedBoundaryEvent(element) || hasLoopMarker(element))
+                .map(element -> element.getId())
+                .collect(Collectors.toList());
+
+        for (Object element:outliers) {
+            System.out.println(element);
+        }
+    }
+
+    public boolean isEmptySubprocess(BaseElement baseElement) {
+        if(baseElement.getElementType().getInstanceType().equals(SubProcess.class)){
+            SubProcess subProcess = (SubProcess) baseElement;
+            return subProcess.getRawTextContent().equals("");
+        }
+        return false;
+    }
+
+    public boolean isNonTypedBoundaryEvent(BaseElement baseElement) {
+        if(baseElement.getElementType().getInstanceType().equals(BoundaryEvent.class)) {
+            BoundaryEvent boundaryEvent = (BoundaryEvent) baseElement;
+            return boundaryEvent.getRawTextContent().equals("");
+        }
+        return false;
+    }
+
+    public boolean hasLoopMarker(BaseElement baseElement) {
+        if(baseElement.getElementType().getInstanceType().equals(ServiceTask.class)) {
+            ServiceTask serviceTask = (ServiceTask) baseElement;
+            if(serviceTask.getDomElement().getChildElements().size() > 0) {
+                if (serviceTask.getDomElement().getChildElements().get(0).getLocalName().equals("standardLoopCharacteristics")) {
+                    return true;
+                }
+            }
+        }
+        return false;
     }
 }
